
syntax = "proto3";

package hvx.api.v1alpha1.activity.proto;
option go_package = "github.com/hvxahv/hvx/APIs/v1alpha1/activity";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

service Outbox {
  rpc CreateOutbox (CreateOutboxRequest) returns (CreateOutboxResponse) {
    option (google.api.http) = {
      post: "/api/v1/activity/outbox"
      body: "*"
    };
  }

  rpc GetOutbox (GetOutboxRequest) returns (GetOutboxResponse) {
    option (google.api.http) = {
      get: "/api/v1/activity/outbox/{activity_id}"
    };
  }

  rpc GetOutboxes (google.protobuf.Empty) returns (GetOutboxesResponse) {
    option (google.api.http) = {
      get: "/api/v1/activity/outbox"
    };
  }
}

message OutboxData {
  string Id = 1;
  string ActorId = 2;
  string ActivityId = 3;
  string To = 4;
  string Cc = 5;
  string Bcc = 6;
  string Bto = 7;
  string Audience = 8;
  string Types = 9;
  string Body = 10;
}

message CreateOutboxRequest {}

message CreateOutboxResponse {}

message GetOutboxRequest {
  string activity_id = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetOutboxResponse {}


message GetOutboxesRequest {}

message GetOutboxesResponse {
  string code = 1;
  repeated OutboxData outboxes = 2;
}